syntax = "proto3";

option go_package = ".;pb";

enum CallbackType {
  CB_COMMAND = 0;
  CB_HTTP = 1;
  CB_FILE = 2;
}

message CommandCallback {
  string name = 1;
  repeated string args = 2;
}

message HttpCallback {
  string url = 1;
  map<string, string> headers = 2;
}

message FileCallback {
  string path = 1;
}

message Callback {
  CallbackType type = 1;
  bytes config = 2;
}