syntax = "proto3";

option go_package = ".;pb";

import "callback.proto";
import "task.proto";

message AddTaskParams {
  string queue = 1;
  Task task = 2;
  Callback callback = 3;
}
